name:                monad-morphism
version:             0.1.0.0
synopsis:            Typeclasses for representing monad (transformer) morphisms
description:         See README.md
homepage:            https://github.com/fpco/monad-morphism
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
copyright:           FP Complete
category:            Control
build-type:          Simple
extra-source-files:  README.md ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Trans.Morphism
                       Control.Monad.Trans.State.Ref
                       Control.Monad.Trans.Writer.Ref
  build-depends:       base >= 4.6 && < 5
                     , monad-control >= 1.0 && < 1.1
                     , transformers
                     , monad-logger >=0.3 && < 0.4
                     , yesod-core >= 1.4 && < 1.5
                     , mtl
                     , transformers-base
                     , mutable-containers >= 0.3 && < 0.4
                     , exceptions >= 0.6
                     , resourcet >= 1.1
                     , stm
  default-language:    Haskell2010
